# codeforces

./: CMakeLists.txt
include/: libraries.h
src/: main.cpp
